# myhy

./: README.md  pyproject.toml  setup.py
myhy/: __init__.py  cli.py  lisp.py
tests/: test_lisp.py
