[project]
name = "myhy"
version = "0.0.0"
description = "Create novel Scheme-like DSL(isp)s using Python."
readme = "README.md"

[[project.authors]]
name = "Ainsley McGrath"
email = "mcgrath.ainsley@gmail.com"

[package.scripts]
myhy = 'myhy.cli:cli'

[tool.setuptools]
packages=["myhy"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^22.12.0"
pylint = "^2.15.9"
tox = "^4.2.5"
ipython = "^8.8.0"
pdbpp = "^0.10.3"
isort = "^5.11.4"
build = "^0.9.0"

[build-system]
requires = ["setuptools", "mypy"]
build-backend = "setuptools.build_meta"

[tool.mypy]
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "setuptools",
  "mypyc.build"
]


[tool.isort]
profile = "black"

[tool.pylint.main]
# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use, and will cap the count on Windows to
# avoid hangs.
jobs = 0

# Pickle collected data for later comparisons.
persistent = true

# When enabled, pylint would attempt to guess common misconfiguration and emit
# user-friendly hints instead of false-positive error messages.
suggestion-mode = true

[tool.pylint.basic]
# Good variable names which should always be accepted, separated by a comma.
good-names = ["a", "b", "c", "d", "e", "f", "g", "h", "i", "j", "k", "l", "m", "n", "o", "p", "q", "r", "s", "t", "u", "v", "w", "x", "y", "z", "do", "id", "_"]

[tool.pylint.design]
# Maximum number of public methods for a class (see R0904).
max-public-methods = 20

# Minimum number of public methods for a class (see R0903).
min-public-methods = 0

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 88

# Maximum number of lines in a module.
max-module-lines = 400

[tool.pylint.miscellaneous]
# List of note tags to take in consideration, separated by a comma.
notes = ["FIXME", "XXX", "TODO", "NOTE"]

# Docstrings are not removed from the similarity computation
ignore-docstrings = false

[tool.pylint.variables]
# List of names allowed to shadow builtins
allowed-redefined-builtins = ['id']
